mise en place index.html

--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
 
 
 
-    /* Navigation */
+   
     .navigation {
         height: 80px;
         display: flex;
@@ -16,7 +16,8 @@
         width: 100%;
         z-index: 33;
         justify-content: space-between;
-        align-items: center padding: 40px;
+        align-items: center ;
+        padding: 40px;
         background-color: #fde9e6;
         /* Rose pâle */
 
@@ -63,7 +64,8 @@
     /* Logo */
     .nav-logo {
         text-align: center;
-        height: 70px display: flex
+        height: 70px ;
+        display: flex
     }
 
     .logo-main {
