--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@ h1 {
                         ainsi que des chaussures et des accessoires, sélectionnés avec la plus grande attention pour leur qualité,
                         leur design et leur confort.
                     </p>
-                    <a href="#" class="btn">En savoir plus</a>
+                    <a href="/mobile.html" class="btn">En savoir plus</a>
                 </div>
             </div>
         </div>
